--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"element-plus": "^2.9.3",
 		"pinia": "^2.3.1",
 		"primevue": "^4.2.5",
-		"vue": "^3.5.13",
 		"vue-chartjs": "^5.3.2",
 		"vue-router": "^4.5.0"
 	},
@@ -30,6 +29,8 @@
 		"@vitejs/plugin-vue-jsx": "^4.1.1",
 		"@vue/eslint-config-prettier": "^10.1.0",
 		"@vue/eslint-config-typescript": "^14.3.0",
+		"@vue/language-server": "^2.2.0",
+		"@vue/runtime-core": "^3.5.13",
 		"@vue/tsconfig": "^0.7.0",
 		"eslint": "^9.18.0",
 		"eslint-plugin-vue": "^9.32.0",
@@ -38,9 +39,10 @@
 		"npm-run-all2": "^7.0.2",
 		"prettier": "^3.4.2",
 		"sass": "^1.83.4",
-		"typescript": "~5.7.3",
+		"typescript": "^5.7.3",
 		"vite": "^6.0.11",
 		"vite-plugin-vue-devtools": "^7.7.0",
+		"vue": "^3.5.13",
 		"vue-tsc": "^2.2.0"
 	}
 }
