--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"pinia": "^2.3.1",
 		"primevue": "^4.2.5",
 		"vue-chartjs": "^5.3.2",
-		"vue-router": "^4.5.0"
+		"vue-router": "^4.5.0",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@tsconfig/node22": "^22.0.0",
