更改app.json以引入ts

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,8 +10,12 @@
 		"skipLibCheck": true,
 		"declaration": true,
 		"noEmit": false,
-		"composite": true
+		"composite": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
 	},
-	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","env.d.ts", "src/**/*"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
