--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"prettier": "^3.4.2",
 		"sass": "^1.83.4",
 		"typescript": "^5.7.3",
+		"unplugin-auto-import": "^19.1.1",
+		"unplugin-vue-components": "^28.4.1",
 		"vite": "^6.0.11",
 		"vite-plugin-vue-devtools": "^7.7.0",
 		"vue": "^3.5.13",
